# demo-foc

./: .mxproject  CMakeLists.txt  FOC.ioc  STM32F103XX_FLASH.ld  USB_BOOTLOADER_NOTES.md
APP/Inc/: app_motor.h
APP/Src/: app_motor.c
BSP/Inc/: bsp_board.h
BSP/Src/: bsp_board.c
Bootloader/: CMakeLists.txt  CMakePresets.json  README.md  STM32F103XX_BOOT.ld  jlink.cfg
Bootloader/Core/Inc/: bootloader.h  main.h  stm32f1xx_it.h
Bootloader/Core/Src/: bootloader.c  main.c  stm32f1xx_it.c
Core/Inc/: stm32f1xx_it.h
Core/Src/: adc.c  can.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  system_stm32f1xx.c  tim.c
Middlewares/ST/STM32_USB_Device_Library/Class/DFU/Src/: usbd_dfu.c
SYS/Inc/: sys_time.h
SYS/Src/: sys_time.c
Task/Inc/: task_comm.h  task_foc.h  task_key.h  task_manager.h  task_oled.h  task_safety.h
Task/Src/: task_comm.c  task_foc.c  task_key.c  task_manager.c  task_oled.c  task_safety.c
USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_dfu_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
